# vidi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: audit.toml
.github/workflows/: build.yml  ci.yml  pages.yml  security.yml
docs/: index.html  style.css
docs/screenshots/: README.md
samples/: README.md  architecture.md  changelog.md  the-colophon-tribune.md
samples/guides/: configuration.md  getting-started.md  troubleshooting.md
samples/notes/: random-thoughts.md
samples/notes/deep/: nested.md
samples/reference/: api.md
src/: App.svelte  app.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  menu.rs  model.rs
src-tauri/src/commands/: folder.rs  mod.rs  open_files.rs  persistence.rs  print.rs  remote.rs  render.rs  search.rs  watcher.rs
src-tauri/src/markdown/: highlight.rs  links.rs  mod.rs  pipeline.rs  sanitize.rs
src-tauri/src/markdown/extensions/: alerts.rs  emoji.rs  heading_ids.rs  math.rs  mermaid.rs  mod.rs  raw_html_images.rs
src-tauri/src/persistence/: mod.rs  store.rs
src-tauri/src/search/: mod.rs
src-tauri/src/sources/: github.rs  local.rs  mod.rs  remote.rs
src/lib/: ipc.ts  types.ts
src/lib/components/: AddressBar.svelte  BookmarksPanel.svelte  ConfirmDialog.svelte  FindBar.svelte  HelpDialog.svelte  Reader.svelte  RecentsPanel.svelte  SearchPanel.svelte  SettingsPanel.svelte  Sidebar.svelte  TabBar.svelte
src/lib/render/: katex-client.ts  (+1 more)
src/tests/: confirm.test.ts  ipc.test.ts  setup.ts  types.test.ts
(+14 files in other folders)
